--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 .grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-template-rows: 1 45px 1 100px;}
 
 header.demo{
