--- a/style.css
+++ b/style.css
@@ -21,4 +21,6 @@ header.demo{
 .demo2{
     background-color:rgb(186, 209, 133);
     grid-column-start: 2;
-    grid-column-end: 3;}
+    grid-column-end: 3;
+    text-align: center;
+    padding-top: 10px;}
