--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face{
+    font-family: alegreya, serif ;
+    font-style: normal;
+    font-weight: 400;}
+    
 .demo{
     color:rgb(47, 47, 47)}
 
