--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-@font-face{
-    font-family: alegreya, serif ;
-    font-style: normal;
-    font-weight: 400;}
-    
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
 .demo{
     color:rgb(47, 47, 47)}
 
