--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: 'Alegreya', serif ;
     font-style: normal;
-    font-weight: 400;}
+    font-weight: 400;
+    src: url(https://fonts.google.com/share?selection.family=Alegreya)} 
 
 .demo{
     color:rgb(47, 47, 47)}
