--- a/style.css
+++ b/style.css
@@ -19,10 +19,12 @@ header.demo{
     text-align: center;;
     padding-top: 25px;}
 
-.demo1{
-    background-color: rgb(227, 200, 241);
+img.demo1{
+    border-color:  rgb(227, 200, 241);
+    border: 20px;
     grid-column-start: 1;
-    grid-column-end: 2;}
+    grid-column-end: 2;
+    width:150px;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
