--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ header.demo{
 img{
     border-color:  rgb(227, 200, 241);
     border: 20px;
+    margin-left: 50%;
+    margin-right: 50%;
     grid-column-start: 1;
     grid-column-end: 2;
-    width:90px;}
+    width:200px;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
