--- a/style.css
+++ b/style.css
@@ -26,10 +26,12 @@ img{
     grid-column-end: 2;
     width:200px;}
 
-.demo1{
+div.demo1{
     background-color: rgb(227, 200, 241);
     grid-column-start: 1;
-    grid-column-end: 2;}
+    grid-column-end: 2;
+    text-align: end;
+    padding-top: 90%;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
