--- a/style.css
+++ b/style.css
@@ -30,8 +30,7 @@ div.demo1{
     background-color: rgb(227, 200, 241);
     grid-column-start: 1;
     grid-column-end: 2;
-    text-align: end;
-    padding-top: 90%;}
+    text-align:center;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
