--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header.demo{
 img{
     margin-left: 20px;
     margin-right: 40px;
+    padding-top: 10px;
     grid-column-start: 1;
     grid-column-end: 2;
     width:200px;}
