--- a/style.css
+++ b/style.css
@@ -16,8 +16,10 @@ header.demo{
     background-color: rgb(249, 249, 230);
     grid-column-start: 1;
     grid-column-end: 3;
-    text-align: center;;
-    padding-top: 25px;}
+    text-align: center;
+    font-size:50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-top: 10px;}
 
 img{
     float: left;
