--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header.demo{
     grid-column-end: 3;
     text-align: center;
     font-size:50px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe Script';
     padding-top: 10px;}
 
 img{
