--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .grid{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1 85px 1 200px;}
 
 header.demo{
@@ -23,9 +23,10 @@ header.demo{
 
 img{
     float: left;
-    padding-top: 10px;
     grid-column-start: 1;
     grid-column-end: 2;
+    grid-column: 1/2;
+    grid-row: 2/3 ;
     width:200px;}
 
 .demo1{
