--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@
 
 .grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1 85px 1 200px;}
 
 header.demo{
     background-color: rgb(249, 249, 230);
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 5;
     text-align: center;
     font-size:50px;
     font-family: 'Segoe Script';
@@ -24,20 +24,23 @@ header.demo{
 img{
     float: left;
     grid-column-start: 1;
-    grid-column-end: 2;
-    grid-column: 1/2;
+    grid-column-end: 3;
+    grid-column: 1/3;
     grid-row: 2/3 ;
     width:200px;}
 
 .demo1{
     background-color: rgb(227, 200, 241);
     grid-column-start: 1;
-    grid-column-end: 2;}
+    grid-column-end: 3;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    font-family: 'Alegreya', serif ;
+    font-size: medium;
+    font-style: normal;
     text-align: center;
     padding-top: 10px;}
 
