--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header.demo{
     background-color: rgb(227, 200, 241);
     grid-column-start: 1;
     grid-column-end: 3;
-    grid-row: span;}
+    grid-row:initial;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
