--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1 85px 1 200px;}
+    grid-template-rows: 1 85px 2 200px;}
 
 header.demo{
     background-color: rgb(249, 249, 230);
@@ -25,7 +25,7 @@ header.demo{
     background-color: rgb(227, 200, 241);
     grid-column-start: 1;
     grid-column-end: 3;
-    grid-row:initial;}
+    grid-row:2/3;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
