--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1 85px 1 200px;}
+    grid-template-rows: 0.5fr 1fr 1fr;
+    gap: 0px 0px;}
 
 header.demo{
     background-color: rgb(249, 249, 230);
-    grid-column-start: 1;
-    grid-column-end: 5;
+    grid-area: 1/ 1/ 2/ 5;
     text-align: center;
     font-size:50px;
     font-family: 'Segoe Script';
@@ -23,15 +23,11 @@ header.demo{
 
 .demo1{
     background-color: rgb(227, 200, 241);
-    grid-column-start: 1;
-    grid-column-end: 3;}
+    grid-area: 2/ 1/ 3/ 3;}
 
 .demo2{
     background-color:rgb(186, 209, 133);
-    grid-column-start: 3;
-    grid-column-end: 5;
-    grid-row: 2/3;
-    grid-column: 3/5;
+    grid-area: 2/ 3/ 3/ 5; 
     font-family: 'Alegreya', serif ;
     font-size: 35px;
     font-style: normal;
