--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.5fr 1fr 1fr;
+    grid-template-rows: 0.5fr 1fr;
     gap: 0px 0px;}
 
 header.demo{
