--- a/style..css
+++ b/style..css
@@ -24,6 +24,7 @@ header.demo {
 
 
 .img1{
-   grid-row:1/2 ;
-   grid-column: 1/2;
+   grid-row:2/3;
+   grid-column-start: 1;
+   grid-column-end: 2;
    width: 200px;}
