--- a/style..css
+++ b/style..css
@@ -28,3 +28,51 @@ header.demo {
    grid-column-start: 1;
    grid-column-end: 2;
    width: 200px;}
+
+.img2{
+   grid-row:3/4;
+   grid-column-start: 1;
+   grid-column-end: 2;
+   width: 200px;}
+
+.img3{
+    grid-row:4/5;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    width: 200px;}
+
+.img4{
+    grid-row:2/3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    width: 200px;}
+
+.img5{
+    grid-row:3/4;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    width: 200px;}
+
+.img6{
+    grid-row:4/5;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    width: 200px;}
+
+.img7{
+    grid-row:2/3;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    width: 200px;}
+
+.img8{
+    grid-row:3/4;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    width: 200px;}
+
+.img9{
+    grid-row:4/5;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    width: 200px;}
