--- a/style..css
+++ b/style..css
@@ -13,14 +13,14 @@
 
 .grid{
   display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 0.7fr 1fr 1fr 1fr;
   gap: 7px 7px;}
 
 header.demo {
   text-align: center;
   grid-column-start: 1;
-  grid-column-end: 4;}
+  grid-column-end: 3;}
 
 
 .img1{
