--- a/style..css
+++ b/style..css
@@ -18,7 +18,7 @@ header.demo {
     /* Slideshow container */
     .slideshow-container {
       max-width: 750px;
-      position: relative;
+      position: center;
       margin: auto;
     }
     
