--- a/style..css
+++ b/style..css
@@ -13,6 +13,11 @@
 header.demo {
     text-align: center;}
 
+text{
+    text-align: center;
+    font-size:20px;
+    font-family: 'Segoe Script';}
+
     * {box-sizing:border-box}
 
     /* Slideshow container */
@@ -22,12 +27,10 @@ header.demo {
       margin: auto;
     }
     
-    /* Hide the images by default */
     .mySlides {
       display: none;
     }
-    
-    /* Next & previous buttons */
+   
     .prev, .next {
       cursor: pointer;
       position: absolute;
@@ -54,7 +57,7 @@ header.demo {
       background-color: rgba(0,0,0,0.8);
     }
     
-    /* Caption text */
+    
     .text {
       color: #f2f2f2;
       font-size: 15px;
@@ -65,7 +68,7 @@ header.demo {
       text-align: center;
     }
     
-    /* Number text (1/3 etc) */
+
     .numbertext {
       color: #f2f2f2;
       font-size: 12px;
@@ -74,7 +77,7 @@ header.demo {
       top: 0;
     }
     
-    /* The dots/bullets/indicators */
+    
     .dot {
       cursor: pointer;
       height: 15px;
