--- a/Gallery page.css
+++ b/Gallery page.css
@@ -14,7 +14,9 @@
     header.demo {
         text-align: center;
         grid-column-start: 1;
-        grid-column-end: 3;}
+        grid-column-end: 3;
+        font-family: 'Segoe Script';
+        font-size: medium;}
 
     h3{
         font-family: 'Alegreya', serif ;
