--- a/Gallery page.css
+++ b/Gallery page.css
@@ -16,7 +16,7 @@
         grid-column-start: 1;
         grid-column-end: 3;
         font-family: 'Segoe Script';
-        font-size: medium;}
+        font-size: 50px;}
 
     h3{
         font-family: 'Alegreya', serif ;
