--- a/Gallery page.css
+++ b/Gallery page.css
@@ -7,7 +7,7 @@
    
     html{
         background-color: rgb(227, 200, 241)}
-        
+
     .grid{
         display:grid;
         grid-template-columns: 1fr 1fr;
@@ -25,7 +25,11 @@
         font-family: 'Alegreya', serif ;
         font-size: 35px;
         font-style: normal;}
-      
+    
+        p{
+            font-family: 'Alegreya', serif ;
+            font-size: 25px;
+            font-style: normal;}     
       
       .img1{
          grid-row:2/3;
