--- a/Gallery page.css
+++ b/Gallery page.css
@@ -34,53 +34,44 @@
       .img1{
          grid-row:2/3;
          grid-column-start: 1;
-         grid-column-end: 2;
-         width: 200px;}
+         grid-column-end: 2;}
       
       .img2{
          grid-row:3/4;
          grid-column-start: 1;
-         grid-column-end: 2;
-         width: 200px;}
+         grid-column-end: 2;}
       
       .img3{
           grid-row:4/5;
           grid-column-start: 1;
-          grid-column-end: 2;
-          width: 200px;}
+          grid-column-end: 2;}
       
       .img4{
           grid-row:2/3;
           grid-column-start: 2;
-          grid-column-end: 3;
-          width: 200px;}
+          grid-column-end: 3;}
       
       .img5{
           grid-row:3/4;
           grid-column-start: 2;
-          grid-column-end: 3;
-          width: 200px;}
+          grid-column-end: 3;}
       
       .img6{
           grid-row:4/5;
           grid-column-start: 2;
-          grid-column-end: 3;
-          width: 200px;}
+          grid-column-end: 3;}
       
       .img7{
           grid-row:2/3;
           grid-column-start: 3;
-          grid-column-end: 4;
-          width: 200px;}
+          grid-column-end: 4;}
       
       .img8{
           grid-row:3/4;
           grid-column-start: 3;
-          grid-column-end: 4;
-          width: 200px;}
+          grid-column-end: 4;}
       
       .img9{
           grid-row:4/5;
           grid-column-start: 3;
-          grid-column-end: 4;
-          width: 200px;}
+          grid-column-end: 4;}
