--- a/About page.css
+++ b/About page.css
@@ -44,7 +44,7 @@ header.demo{
     grid-column-end: 2;}
 
 img{
-    width: 835px;
+    object-fit: fill;
     grid-row: 2/3;
     grid-column: 3/6;
     grid-column-start: 3;
