--- a/home page.css
+++ b/home page.css
@@ -24,7 +24,10 @@ header.demo{
 
 .demo1{
     background-color: rgb(227, 200, 241);
-    grid-area: 2/ 1/ 3/ 3;}
+    grid-area: 2/ 1/ 3/ 3;
+    width:250px;
+    height:100px}
+
 
 .demo2{
     background-color:rgb(186, 209, 133);
