--- a/home page.css
+++ b/home page.css
@@ -20,13 +20,19 @@ header.demo{
     text-align: center;
     font-size:50px;
     font-family: 'Segoe Script';
-    padding-top: 120px;}
+    padding-top: 50px;
+    padding-bottom: 50px;}
 
 .demo1{
     background-color: rgb(227, 200, 241);
-    grid-area: 2/ 1/ 3/ 3;
-    width:250px;
-    height:100px}
+    grid-area: 2/ 1/ 3/ 3;}
+
+.box{
+    width:350px;
+    height:351px;
+    object-position: left;
+    padding-left: 140px;
+    grid-area:2/ 1 / 3 / 3;}
 
 
 .demo2{
