--- a/home page.css
+++ b/home page.css
@@ -10,7 +10,7 @@
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.5fr 1fr;
+    grid-template-rows: 0.5fr 1fr 0.5fr;
     gap: 0px 0px;}
 
 header.demo{
@@ -25,14 +25,13 @@ header.demo{
 
 .demo1{
     background-color: rgb(227, 200, 241);
-    grid-area: 2/ 1/ 3/ 3;}
+    grid-area: 2/ 1/ 3/ 5;}
 
 .box{
     width:350px;
     height:351px;
-    object-position: left;
-    padding-left: 140px;
-    grid-area:2/ 1 / 3 / 3;}
+    padding-left: 72%;
+    grid-area: 2/ 1 / 3 / 3;}
 
 
 .demo2{
@@ -41,4 +40,5 @@ header.demo{
     font-family: 'Alegreya', serif ;
     font-size: 35px;
     font-style: normal;
-    text-align: center;}
+    text-align: center;
+    padding-left: 1%;}
