--- a/Gallery page.css
+++ b/Gallery page.css
@@ -33,9 +33,8 @@
       .img1{
          grid-row:2/3;
          grid-column-start: 1;
-         grid-column-end: 2;
-        ;}
-      
+         grid-column-end: 2;}
+         
       .img2{
          grid-row:3/4;
          grid-column-start: 1;
