--- a/About page.css
+++ b/About page.css
@@ -12,6 +12,10 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 2 80px 1 100px;}
 
+.box1{
+    font-family: 'Alegreya', serif ;
+    font-size: 18px;}
+
 header.demo{
     background-color: rgb(227, 200, 241);
     grid-column-start: 1;
@@ -32,7 +36,6 @@ header.demo{
     grid-column-start: 1;
     grid-column-end:3;
     grid-row: 2/3;
-    grid-column: 1/3;
     text-align: center;
     font-size: 21px;
     font-family: 'Alegreya', serif ;
