--- a/About page.css
+++ b/About page.css
@@ -12,15 +12,16 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 2 80px 1 100px;}
 
+body{
+    display: block;
+    margin: 0px;}
+
+
 p{
     display: block;
     margin: 0px;
     padding-top: 22px;}
 
-.box1{
-    font-family: 'Alegreya', serif ;
-    text-align: left;}
-    
 header.demo{
     background-color: rgb(227, 200, 241);
     grid-column-start: 1;
