--- a/home page.css
+++ b/home page.css
@@ -7,6 +7,10 @@
 .demo{
     color:rgb(47, 47, 47)}
 
+body{
+    display: block;
+    margin: 0px;}
+
 .box1{
     font-family: 'Alegreya', serif ;
     text-align: center;
