--- a/home page.css
+++ b/home page.css
@@ -8,7 +8,7 @@
     color:rgb(47, 47, 47)}
 
 body{
-    display: block;
+    display:block;
     margin: 0px;}
 
 .box1{
@@ -47,20 +47,29 @@ header.demo{
 
 .demo1{
     background-color: rgb(227, 200, 241);
-    grid-area: 2/ 1/ 3/ 5;}
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;}
 
 .box{
     width:350px;
     height:351px;
-    padding-left: 72%;
-    grid-area: 2/ 1 / 3 / 3;}
+    padding-left: 20%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;}
 
 
 .demo2{
     background-color:rgb(186, 209, 133);
-    grid-area: 2/ 3/ 3/ 5; 
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 2;
+    grid-row-end: 3;
     font-family: 'Alegreya', serif ;
-    font-size: 35px;
+    font-size: 30px;
     font-style: normal;
     text-align: center;
-    padding-left: 1%;}
+    padding-top: 25px ;}
