--- a/About page.css
+++ b/About page.css
@@ -6,6 +6,24 @@
 
 .demo{
     color:rgb(47, 47, 47)}
+
+    .box{
+        font-family: 'Segoe Script';
+        font-size: 20px;
+        text-align: center;
+        word-spacing: 25px;}
+       
+        a:link{
+            text-decoration: none;
+            color: lightgray;}
+        
+        a:visited{
+            text-decoration: none;
+            color: rgb(51, 140, 143);}
+    
+        a:hover{
+            text-decoration: underline;
+            color:rgb(188, 87, 28)}
     
 .grid{
     display: grid;
