--- a/Gallery page.css
+++ b/Gallery page.css
@@ -31,50 +31,40 @@
     
         .grid{
             display:grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 0.5fr 1fr 1fr;
-            gap: 7px 7px;}
+            grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr ;
+            gap: 7px;}
           
+
         header.demo {
             text-align:center;
             grid-column-start: 1;
             grid-column-end: 3;
             font-family: 'Segoe Script';
             font-size: 50px;}
+
+        .figcaption{
+            font-size: 5px;}
     
-        h1{
-            font-family: 'Alegreya', serif ;
-            font-size: 20px;
-            font-style: normal;}
-        
-        p{
-            font-family: 'Alegreya', serif ;
-            font-size: 15px;
-            font-style: normal;}     
-          
           .img1{
-             grid-row-start:1;
-             grid-row-end: 2;
-             grid-column-start: 1;
-             grid-column-end: 2;}
+             grid-column: 1/ 2;
+             grid-row: 1/ 2;}
+            
              
           .img2{
-             grid-row-start:1;
-             grid-row-end: 2;
-             grid-column-start: 1;
-             grid-column-end: 2;}
+             grid-row:1/2;
+             grid-column: 2/ 3;}
+        
           
           .img3{
-              grid-row-start: 1;
-              grid-row-end: 2;
-              grid-column-start: 1;
-              grid-column-end: 2;}
-          
+              grid-row: 1/ 2;
+              grid-column: 3/ 4;}
+
           .img4{
               grid-row-start: 2;
               grid-row-end: 3;
-              grid-column-start: 2;
-              grid-column-end: 3;}
+              grid-column-start: 1;
+              grid-column-end: 2;}
           
           .img5{
               grid-row-start: 2;
@@ -85,20 +75,20 @@
           .img6{
               grid-row-start: 2;
               grid-row-end: 3;
-              grid-column-start: 2;
-              grid-column-end: 3;}
+              grid-column-start: 3;
+              grid-column-end: 4;}
           
           .img7{
             grid-row-start: 3;
             grid-row-end: 4;
-              grid-column-start: 3;
-              grid-column-end: 4;}
+              grid-column-start: 1;
+              grid-column-end: 2;}
           
           .img8{
             grid-row-start: 3;
             grid-row-end: 4;
-              grid-column-start: 3;
-              grid-column-end: 4;}
+              grid-column-start: 2;
+              grid-column-end: 3;}
           
           .img9{
             grid-row-start: 3;
