--- a/Gallery page.css
+++ b/Gallery page.css
@@ -33,7 +33,8 @@
             display:grid;
             grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
             grid-template-rows: 1fr 1fr 1fr ;
-            gap: 8px;}
+            gap: 8px;
+        border-radius: 5px;}
           
 
         header.demo {
@@ -43,8 +44,9 @@
             font-family: 'Segoe Script';
             font-size: 50px;}
 
-        .figcaption{
-            font-size: 5px;}
+        figcaption{
+            font-size: 14px;
+            font-family: 'Alegreya', serif ;}
     
           .img1{
              grid-column: 1/ 2;
@@ -61,37 +63,25 @@
               grid-column: 3/ 4;}
 
           .img4{
-              grid-row-start: 2;
-              grid-row-end: 3;
-              grid-column-start: 1;
-              grid-column-end: 2;}
+              grid-row: 2/ 3;
+              grid-column:1/ 2;}
           
           .img5{
-              grid-row-start: 2;
-              grid-row-end: 3;
-              grid-column-start: 2;
-              grid-column-end: 3;}
+              grid-row:2/ 3;
+              grid-column:2/ 3;}
           
           .img6{
-              grid-row-start: 2;
-              grid-row-end: 3;
-              grid-column-start: 3;
-              grid-column-end: 4;}
+              grid-row:2/ 3;
+              grid-column:3/ 4;}
           
           .img7{
-            grid-row-start: 3;
-            grid-row-end: 4;
-              grid-column-start: 1;
-              grid-column-end: 2;}
+            grid-row:3/ 4;
+              grid-column:1/ 2;}
           
           .img8{
-            grid-row-start: 3;
-            grid-row-end: 4;
-              grid-column-start: 2;
-              grid-column-end: 3;}
+            grid-row:3/ 4;
+              grid-column:2/ 3;}
           
           .img9{
-            grid-row-start: 3;
-            grid-row-end: 4;
-              grid-column-start: 3;
-              grid-column-end: 4;}
+            grid-row:3/ 4;
+              grid-column:3/ 4;}
