--- a/Make it last.css
+++ b/Make it last.css
@@ -36,7 +36,8 @@ html{
 .header{
    text-align: center;
    font-size:50px;
-   font-family: 'Alegreya', serif;}
+   font-family: 'Alegreya', serif;
+    padding-bottom: 10px;}
 
 .demo1{
     background-color: rgb(249, 249, 230);
@@ -44,7 +45,7 @@ html{
     grid-column-end: 3;
     grid-row: 2/6;
     grid-column: 1/3;
-    padding-top: 50px;
+    padding-top: 55px;
     text-align: center;
     font-size:25px;
     font-family: 'Alegreya', serif;}
